// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MyAwesomeApp > should match snapshot 1`] = `
<div>
  <div
    data-testid="div-app"
  >
    <h1
      data-testid="first-name-title"
    >
       
      Edual Dan
       
    </h1>
    <h3>
       
      Sarmiento Garfias
       
    </h3>
    <p
      class="mi-clase-favorita"
    >
      Overwatch, Hero of the Storm
    </p>
    <p>
      4
    </p>
    <h1>
       
      Activo
    </h1>
    <pre
      style="background-color: rgb(250, 250, 250); border-radius: 20px; padding: 10px; margin-top: 30px;"
    >
      {"zipCode":"ABC-1234","country":"Bolivia"}
    </pre>
  </div>
</div>
`;

exports[`MyAwesomeApp > should match snapshot 2`] = `
<div
  data-testid="div-app"
>
  <h1
    data-testid="first-name-title"
  >
     
    Edual Dan
     
  </h1>
  <h3>
     
    Sarmiento Garfias
     
  </h3>
  <p
    class="mi-clase-favorita"
  >
    Overwatch, Hero of the Storm
  </p>
  <p>
    4
  </p>
  <h1>
     
    Activo
  </h1>
  <pre
    style="background-color: rgb(250, 250, 250); border-radius: 20px; padding: 10px; margin-top: 30px;"
  >
    {"zipCode":"ABC-1234","country":"Bolivia"}
  </pre>
</div>
`;
